2020-12-20  Luca Saiu  <positron@gnu.org>

	* libpoke/pvm.jitter (r): Change the number of fast
	registers, enable slow registers.

2020-12-20  Luca Saiu  <positron@gnu.org>

	* libpoke/pvm.jitter (vm): Remove stack specifications...
	(s, t, x): ...And add them back to their new sections.
	(r): Adapt to new syntax.
	These changes adapt poke to Jitter's new syntax.

2020-12-20  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-hserver.pk (hserver_print_hl): New function.

2020-12-20  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-hserver.pk: New file.
	* poke/Makefile.am (dist_pkgdata_DATA): Add pk-hserver.pk.
	* poke/pk-hserver.c (pk_hserver_init): Load pk-hserver.pk.
	(pk_hserver_port): Get the value of the port from the poke value.
	Turn pk_hserver_port and pk_hserver_tokens into pk values.
	(pk_hserver_get_token): Rewrite to use the hserver_get_token.
	(pk_hserver_token): New function.
	(pk_hserver_make_hyperlink): Rewrite to call the Poke code.
	(pk_hserver_start): Rename from pk_hserver_init.

2020-12-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.h: Prototype for pk_decl_set_val.
	* libpoke/libpoke.c (pk_decl_set_val): New function.

2020-12-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y (struct_type_specifier): Fix the unit of
	OFFSET.

2020-12-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/std.pk (ltos): New function.
	* doc/poke.texi (ltos): New section.
	* testsuite/poke.std/std-test.pk: Test for ltos.

2020-12-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/std.pk (reverse): New function.
	* testsuite/poke.std/std-test.pk: Tests for `reverse'.
	* doc/poke.texi (Array Functions): New section.
	(reverse): New subsection.
	* testsuite/lib/poke-pk.exp (tap_execute): Do not style output
	when running pktests.

2020-12-18  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_indexer): Make sure to traverse
	entity and index in normal context, as assignments can be nested
	via post/pre incr/decr expressions.