@@ -2254,27 +2254,19 @@ PKL_PHASE_BEGIN_HANDLER (pkl_typify1_ps_print_stmt)
                   PKL_PASS_ERROR;
                 }
 
-              if (!pkl_ast_type_equal_p (arg_type, type))
+              if (!pkl_ast_type_promoteable_p (arg_type, type, 0))
                 {
-                  if (PKL_AST_TYPE_CODE (type) == PKL_TYPE_ANY
-                      || (PKL_AST_TYPE_CODE (type) == PKL_TYPE_INTEGRAL
-                          && PKL_AST_TYPE_CODE (arg_type) == PKL_TYPE_INTEGRAL))
-                    /* Integers can be promoted.  */
-                    ;
-                  else
-                    {
-                      char *found_type = pkl_type_str (arg_type, 1);
-                      char *expected_type = pkl_type_str (type, 1);
+                  char *found_type = pkl_type_str (arg_type, 1);
+                  char *expected_type = pkl_type_str (type, 1);
 
-                      PKL_ERROR (PKL_AST_LOC (arg),
-                                 "printf argument is of an invalid type\n\
+                  PKL_ERROR (PKL_AST_LOC (arg),
+                             "printf argument is of an invalid type\n\
 expected %s, got %s",
-                                 expected_type, found_type);
-                      free (found_type);
-                      free (expected_type);
-                      PKL_TYPIFY_PAYLOAD->errors++;
-                      PKL_PASS_ERROR;
-                    }
+                             expected_type, found_type);
+                  free (found_type);
+                  free (expected_type);
+                  PKL_TYPIFY_PAYLOAD->errors++;
+                  PKL_PASS_ERROR;
                 }
             }
         }
