@@ -1361,6 +1361,7 @@ EXTRA_DIST = \
   poke.pkl/printf-diag-15.pk \
   poke.pkl/printf-diag-16.pk \
   poke.pkl/printf-diag-17.pk \
+  poke.pkl/printf-diag-18.pk \
   poke.pkl/printf-value-1.pk \
   poke.pkl/printf-value-2.pk \
   poke.pkl/printf-value-3.pk \
